--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/Bold-BS4-CSS-Image-Slider.css">
 </head>
 
 <body id="page-top">
-    <nav class="navbar navbar-light navbar-expand-md navbar navbar-expand-lg fixed-top" id="mainNav">
+    <nav class="navbar navbar-light navbar-expand-md navbar navbar-expand-lg fixed-top" id="mainNav" style="background: #000000;border-bottom-style: solid;border-bottom-color: #113012;">
         <div class="container"><a class="navbar-brand js-scroll-trigger" href="#">POGTEK</a><button data-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
@@ -23,15 +24,24 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background-image:url('assets/img/intro-bg.jpg');">
-        <div class="intro-body">
+    <header class="masthead" style="background: url(&quot;assets/img/POGTEKBACKGROUNDdarkenedandrotated.jpg&quot;);">
+        <div class="intro-body" style="background: url(&quot;assets/img/POGTEKBACKGROUNDdarkened.jpg&quot;), #000000;background-size: cover, auto;">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h1 class="brand-heading">grayscale</h1>
+                        <h1 class="brand-heading" style="font-size: 70px;">Products</h1>
                         <p class="intro-text">Innovation</p><a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a>
                     </div>
                 </div>
+            </div>
+            <div class="accordian">
+                <ul>
+                    <li><a class="image_title" href="#">MoNetP</a><a href="#"><img src="http://thecodeplayer.com/uploads/media/3yiC6Yq.jpg"></a></li>
+                    <li><a class="image_title" href="#">Wireless Services</a><a href="#"><img src="http://thecodeplayer.com/uploads/media/40Ly3VB.jpg"></a></li>
+                    <li><a class="image_title" href="#">Web Hosting</a><a href="#"><img src="http://thecodeplayer.com/uploads/media/00kih8g.jpg"></a></li>
+                    <li><a class="image_title" href="#">Maintenance</a><a href="#"><img src="http://thecodeplayer.com/uploads/media/2rT2vdx.jpg"></a></li>
+                    <li><a class="image_title" href="#">About</a><a href="#"><img src="http://thecodeplayer.com/uploads/media/8k3N3EL.jpg"></a></li>
+                </ul>
             </div>
         </div>
     </header>
